generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model Borrow {
  id              Int      @id @default(autoincrement())
  userLogin       String
  joyconsTaken    Int
  borrowOpeningId String      @unique
  returnOpeningId String      @unique
  createdAt       DateTime @default(now())

  user          User    @relation(fields: [userLogin], references: [login])
  borrowOpening Opening @relation(name: "borrowOpening", fields: [borrowOpeningId], references: [id])
  returnOpening Opening @relation(name: "borrowClosing", fields: [returnOpeningId], references: [id])
}

model Opening {
  id              String       @id @default(uuid())
  date            DateTime?
  code            String?
  codeGeneratedAt DateTime?
  borrow          Borrow?   @relation("borrowOpening")
  return          Borrow?   @relation("borrowClosing")
}

model User {
  login     String   @id
  firstName String
  lastName  String
  mail      String   @unique
  Borrow    Borrow[]
}
