//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Borrow {
  id Int [pk, increment]
  userLogin String [not null]
  joyconsTaken Int [not null]
  borrowOpeningId String [unique, not null]
  returnOpeningId String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
  borrowOpening Opening [not null]
  returnOpening Opening [not null]
}

Table Opening {
  id String [pk]
  date DateTime
  code String
  codeGeneratedAt DateTime
  borrow Borrow
  return Borrow
}

Table User {
  login String [pk]
  firstName String [not null]
  lastName String [not null]
  mail String [unique, not null]
  Borrow Borrow [not null]
}

Ref: Borrow.userLogin > User.login

Ref: Borrow.borrowOpeningId - Opening.id

Ref: Borrow.returnOpeningId - Opening.id